--- a/style.css
+++ b/style.css
@@ -1,22 +1,25 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');
 
 body {
     overscroll-behavior: none;
     height: 100%;
     width: 100%;
+    font-family: "Outfit";
+    margin: 0;
   }
   .container {
     overscroll-behavior: none;
-    width: 600%;
+    width: 300%;
     height: 100%;
     display: flex;
     flex-wrap: nowrap;
+
   }
 
   .frame{
     width: 100%;
     height: 100%;
-    display: block;
+    display: flex;
   }
 
   .one{
@@ -24,9 +27,13 @@ body {
   }
 
   .one img{
-    width: 20%;
-    height: 20%;
-    position: center;
+    width: 25%;
+    height: 100%;
+    z-index: -1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
   }
 
   .two{
