--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body {
     width: 100%;
     font-family: "Outfit";
     margin: 0;
+    color: black;
+    overflow-x: hidden;
+    overflow-y:auto;
   }
   .container {
     overscroll-behavior: none;
@@ -20,6 +23,8 @@ body {
     width: 100%;
     height: 100%;
     display: flex;
+    margin: 0;
+    text-align: center;
   }
 
   .one{
