--- a/style.css
+++ b/style.css
@@ -1,58 +1,180 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit&display=swap');
 
 body {
-    overscroll-behavior: none;
-    height: 100%;
-    width: 100%;
     font-family: "Outfit";
     margin: 0;
     color: black;
     overflow-x: hidden;
-    overflow-y:auto;
+    background-color: black;
   }
   .container {
-    overscroll-behavior: none;
-    width: 300%;
-    height: 100%;
+    width: 1000%;
+    height: 100vh;
     display: flex;
     flex-wrap: nowrap;
-
+    overflow-x: hidden;
+    
   }
 
   .frame{
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     margin: 0;
     text-align: center;
   }
 
   .one{
-    background-color: aqua;
+    background-color: lightsalmon;
+    width: 100vw;
+    height: 100vh;
   }
 
   .one img{
-    width: 25%;
-    height: 100%;
+    width: 40%;
+    height: 75%;
     z-index: -1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     overflow: hidden;
+    margin: auto;
   }
 
   .two{
-    background-color: black;
+    background-color: #daf9e9;
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .two img{
+    width: 70%;
+    height: 100%;
+    z-index: -1;
+    overflow: hidden;
+    margin: auto;
   }
 
   .three{
-    background-color: green;
+    background-color: #aadfb6;
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .three img{
+    width: 40%;
+    height: 75%;
+    z-index: -1;
+    overflow: hidden;
+    margin: auto;
+  }
+
+  .four{
+    background-color: #e4a88f;
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .four img{
+    width: 60%;
+    height: 100%;
+    z-index: -1;
+    overflow: hidden;
+    margin: auto;
+  }
+
+  .five{
+    background-color: #4c625d;
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .five img{
+    width: 40%;
+    height: 75%;
+    z-index: -1;
+    overflow: hidden;
+    margin: auto;
+  }
+
+  .six{
+    background-color: #598d91;
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .six img{
+    width: 40%;
+    height: 75%;
+    z-index: -1;
+    overflow: hidden;
+    margin: auto;
+  }
+
+  .seven{
+    background-color: #ec6e7a;
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .seven img{
+    width: 40%;
+    height: 75%;
+    z-index: -1;
+    overflow: hidden;
+    margin: auto;
+  }
+
+  .eight{
+    background-color: #5c5e70;
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .eight img{
+    width: 50%;
+    height: 75%;
+    z-index: -1;
+    overflow: hidden;
+    margin: auto;
+  }
+
+  .nine{
+    background-color: #171717;
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .nine img{
+    width: 40%;
+    height: 75%;
+    z-index: -1;
+    overflow: hidden;
+    margin: auto;
+  }
+
+  .ten{
+    background-color: #251216;
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .ten img{
+    width: 40%;
+    height: 75%;
+    z-index: -1;
+    overflow: hidden;
+    margin: auto;
   }
 
 .header{
   position:absolute;
   z-index: 1;
   top: 1vh;
+  left: 1vw;
+}
+
+.footer{
+  position:absolute;
+  z-index: 1;
+  top: 95vh;
   left: 1vw;
 }
 
