--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   }
   
   .container {
-    width: 1000%;
+    width: 1100%;
     height: 100vh;
     display: flex;
     flex-wrap: nowrap;
@@ -159,6 +159,20 @@ body {
   }
 
   .ten img{
+    width: 40%;
+    height: 75%;
+    z-index: -1;
+    overflow: hidden;
+    margin: auto;
+  }
+
+  .eleven{
+    background-color: #251216;
+    width: 100vw;
+    height: 100vh;
+  }
+
+  .eleven img{
     width: 40%;
     height: 75%;
     z-index: -1;
