--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   }
   
   .container {
-    width: 1100%;
+    width: 1100vw;
     height: 100vh;
     display: flex;
     flex-wrap: nowrap;
