--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@ body {
   overflow-x: hidden;
   background-color: black;
   font-size: 1rem;
+  -ms-overflow-style: none;  
+  scrollbar-width: none;  
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 .container {
